# FFmpegPlayer

app/: build.gradle
app/src/androidTest/java/com/nzy/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  CallJava.cpp  CallJava.h  NFfmpeg.cpp  NFfmpeg.h  Playstatus.cpp  Playstatus.h  SafeQueue.cpp  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  native_log.h
app/src/main/cpp/include/libavutil/: avconfig.h
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/java/com/nzy/ffmpegplayer/: FFmpegPlayer.java  MainActivity.java  PlayRender.java  PlayerGlSurfaceView.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: fragment_shader.glsl
app/src/test/java/com/nzy/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
